Fixed grid layout issue where left card was lower than other cards and fixed background color/box shadows

--- a/css/team-interface.css
+++ b/css/team-interface.css
@@ -4,7 +4,7 @@
 
 body {
   height: 100vh;
-  background-image: radial-gradient(circle 36rem, #d885d8, #fff);
+  /* background-image: radial-gradient(circle 36rem, #f6e4f6, #fbf1fb); */
   background-repeat: no-repeat;
 }
 
@@ -26,10 +26,11 @@ body {
 }
 
 .card {
-  background-color: #f4e1f4;
+  background-color: #fff;
   padding: 3.2rem 4.8rem;
   border-radius: 2.8rem;
-  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.3);
+
+  box-shadow: 2rem 2rem 10rem rgba(255, 160, 225);
 }
 
 .sabrina,
@@ -50,13 +51,7 @@ body {
 }
 
 .sabrina {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 2.4rem;
-
-  grid-row: 1 / -4;
+  grid-row: 1 / -3;
 }
 
 .description {
